je sais plus...

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
@@ -15,7 +15,7 @@
 
                         <div class="col-sm-10">
                             <select id="type" name="type">
-                                <option value="elclassico" selected>Classique</option>
+                                <option value="Classique" selected>Classique</option>
                                 <option value="elpez">PESV2</option>
                             </select>
                             <img id="loadinggif" src="{{ asset("/bundles/sesilemain/img/load.gif") }}"/>
