modif new menu + suppr menu user champs.

--- a/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
@@ -98,7 +98,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="{{ path("gestion_circuit") }}">
+                        <a href="{{ path("admin") }}">
                             <img class="arrows" src="{{ asset("/images/arrowgreen.png") }}"/>
                             Message d'accueil
                         </a>
@@ -107,6 +107,12 @@
                         <a href="{{ path("liste_users") }}">
                             <img class="arrows" src="{{ asset("/images/arrowgreen.png") }}"/>
                             Gestion des utilisateurs
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{{ path("index_collectivite") }}">
+                            <img class="arrows" src="{{ asset("/images/arrowgreen.png") }}"/>
+                            Collectivités
                         </a>
                     </li>
                 </ul>
