--- a/src/Sesile/MainBundle/Resources/views/Default/admin.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/admin.html.twig
@@ -3,14 +3,26 @@
 {% block content %}
     <div class="bloc_page">
         <div class="titre_page">
-            <span class="glyphicon glyphicon-cog"></span>
-            &nbsp;&nbsp;&nbsp;Administration
+            <span class="glyphicon glyphicon-comment"></span>
+            &nbsp;&nbsp;&nbsp;Édition du message d'accueil
         </div>
         <form action="{{ path('admin') }}" {{ form_enctype(form) }} method="POST">
-            {{ form_label(form.msg) }}
             {{ form_widget(form.msg) }}
-
+            <br>
+            <br>
             {{ form_widget(form.submit, {'attr': {'class': 'btn btn-success' }}) }}
         </form>
     </div>
+
+
+    <link rel="stylesheet" type="text/css" href="{{ asset("/bootstrap3-wysihtml5/src/bootstrap-wysihtml5.css") }}" />
+    <script src="{{ asset("/bootstrap3-wysihtml5/lib/js/wysihtml5-0.3.0.js") }}" type="text/javascript"></script>
+    <script src="{{ asset("/bootstrap3-wysihtml5/src/bootstrap3-wysihtml5.js") }}" type="text/javascript"></script>
+    <script src="{{ asset("/bootstrap3-wysihtml5/src/locales/bootstrap-wysihtml5.fr-FR.js") }}"></script>
+    <script type="text/javascript">
+        $('textarea').wysihtml5({
+            "image": false,
+             locale: "fr-FR"
+        });
+    </script>
 {% endblock %}
