--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
@@ -16,8 +16,13 @@
 
                         <div class="col-sm-10">
                             <select id="type" name="type">
-                                <option value="Classique" selected>Classique</option>
-                                <option value="elpez">PESV2</option>
+                                <option value="Classique" selected>Divers</option>
+                                <option value="Helios">Hélios</option>
+                                <option value="Acte">Acte Budgétaire</option>
+                                <option value="Marchés">Marchés</option>
+                                <option value="Convocation">Convocation</option>
+                                <option value="Courrier AR">Courrier AR</option>
+                                <option value="Document Urba">Document Urba</option>
                             </select>
                             <img id="loadinggif" src="{{ asset("/bundles/sesilemain/img/load.gif") }}"/>
                         </div>
