--- a/src/Sesile/DelegationsBundle/Resources/views/Default/ajout.html.twig
+++ b/src/Sesile/DelegationsBundle/Resources/views/Default/ajout.html.twig
@@ -9,18 +9,24 @@
             &nbsp;&nbsp;&nbsp;Déléguer ses droits
         </div>
         <form action="{{ path("delegation_create") }}" method="post">
+            <div class="label_form label-form-input">
+                <span class="deleg-to-someone">Déléguer à : &nbsp;</span>
             <select name="user">
                 {% for user in users %}
                     <option value="{{ user.id }}">{{ user.Prenom }} {{ user.Nom }}</option>
                 {% endfor %}
             </select>
             <br>
-            <span class="add-on">Début délégation : &nbsp;</span>
-            <input class="datepicker" id="deleg_debut" name="debut" type="datetime"/>
+            <div class="label_form label-form-input">
+                <span class="deleg-to-someone">Début délégation : &nbsp;</span>
+                <input class="datepicker deleg_debut_fin" name="debut" type="datetime"/>
+            </div>
             <br>
-            <span class="add-on">Fin délégation : &nbsp;</span>
-            <input class="datepicker" id="deleg_fin" name="fin" type="datetime"/>
-            <br>
+            <div class="label_form label-form-input">
+                <span class="deleg-to-someone">Fin délégation : &nbsp;</span>
+                <input class="datepicker deleg_debut_fin" name="fin" type="datetime"/>
+            </div>
+                <br>
             <button type="submit" class="btn btn-success">Enregistrer</button>
             <a href="{{ path("delegations_list") }}" class="btn btn-danger">Annuler</a>
         </form>
