--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -182,7 +182,9 @@
                             <span class="glyphicon glyphicon-home"></span>
                             Informations
                         </div>
-                        <img src="http://www.purina.fr/images/articles/illustrations/chat/coaching/entretenir_poils_longs_chat.jpg">
+                        <div id="img_accueil">
+                            <img src="{{ asset("/images/image001.jpg") }}"/>
+                        </div>
                     {% endif %}
                 </div>
             </div>
