img acceuil + new favicon bis

--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -183,7 +183,7 @@
                             Informations
                         </div>
                         <div id="img_accueil">
-                            <img src="{{ asset("/images/image001.jpg") }}"/>
+                            <img src="{{ asset("/images/paraph_img_accueil.jpg") }}"/>
                         </div>
                     {% endif %}
                 </div>
