--- a/src/Sesile/DelegationsBundle/Resources/views/Default/ajout.html.twig
+++ b/src/Sesile/DelegationsBundle/Resources/views/Default/ajout.html.twig
@@ -9,24 +9,20 @@
             &nbsp;&nbsp;&nbsp;Déléguer ses droits
         </div>
         <form action="{{ path("delegation_create") }}" method="post">
-            <div class="label_form label-form-input">
-                <span class="deleg-to-someone">Déléguer à : &nbsp;</span>
+            <span class="deleg-to-someone">Déléguer à : &nbsp;</span>
             <select name="user">
                 {% for user in users %}
                     <option value="{{ user.id }}">{{ user.Prenom }} {{ user.Nom }}</option>
                 {% endfor %}
             </select>
             <br>
-            <div class="label_form label-form-input">
-                <span class="deleg-to-someone">Début délégation : &nbsp;</span>
-                <input class="datepicker deleg_debut_fin" name="debut" type="datetime"/>
-            </div>
             <br>
-            <div class="label_form label-form-input">
-                <span class="deleg-to-someone">Fin délégation : &nbsp;</span>
-                <input class="datepicker deleg_debut_fin" name="fin" type="datetime"/>
-            </div>
-                <br>
+            <span class="deleg-to-someone">Début délégation : &nbsp;</span>
+            <input class="datepicker deleg_debut_fin" id="deleg_debut" name="debut" type="datetime"/>
+            <br>
+            <span class="deleg-to-someone">Fin délégation : &nbsp;</span>
+            <input class="datepicker deleg_debut_fin" id="deleg_fin" name="fin" type="datetime"/>
+            <br>
             <button type="submit" class="btn btn-success">Enregistrer</button>
             <a href="{{ path("delegations_list") }}" class="btn btn-danger">Annuler</a>
         </form>
