--- a/web/css/style.css
+++ b/web/css/style.css
@@ -340,16 +340,14 @@ html, body {
 	margin: 1em 0em;
 }
 .deleg-to-someone{
-	background: #F5F5F5;
-	border: 1px solid #CCCCCC;
-	border-radius: 3px 0 0 3px;
 	color: #6D6E70;
-	height: 18px;
+	height: 2em;
+	width: auto;
+	display: inline;
 	line-height: 18px;
 	padding: 4px 4px 4px 5px;
 	text-align: center;
 	text-shadow: 0 1px 0 #FFFFFF;
-	width: auto;
 }
 
 select  [name=user] {
