Correction d'un bug sur l'affichage d'html en page d'accueil, correction des textarea

--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -89,7 +89,9 @@
                                 <span class="glyphicon glyphicon-home"></span>
                                 Bienvenue
                             </div>
-                            {{ msg_acc }}
+                            {% filter raw %}
+                            {{ msg_acc|raw }}
+                            {% endfilter %}
                         </div>
                     </div>
                 {% endif %}
