--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -33,8 +33,8 @@
 
 <div id="maman">
 <div id="gauche">
-    <a href="{{ app.request.getBaseURL() }}">
-        <div id="logo">
+    <a href="/">
+    <div id="logo">
             <img src="{{ asset("/images/badlogo.png") }}"/>
 
         </div>
