--- a/web/css/style.css
+++ b/web/css/style.css
@@ -359,14 +359,18 @@ select  [name=user] {
 	display: inline-block;
 }
 
-.btn-valider,
-.btn-modifier,
-.btn-refuser,
-.btn-retracter,
-.btn-supprimer {
-	color: white;
-	padding: 3px 6px !important;
+.btn {
+	margin: 0 6px 0 0 !important;
 }
+
+/*.btn-valider,*/
+/*.btn-modifier,*/
+/*.btn-refuser,*/
+/*.btn-retracter,*/
+/*.btn-supprimer {*/
+	/*color: white;*/
+	/*padding: 3px 6px !important;*/
+/*}*/
 
 .btn-valider {
 	background-color: rgb(15, 148, 0);
