Correction d'un bug sur la page de signature

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
@@ -146,4 +146,6 @@
             });
         </script>
     </div>
+    <object id="winFirefoxPlugin" type="application/x-sharepoint"
+            style="position: absolute; top: 2000000 px; left: 2000000 px;"></object>
 {% endblock %}
