--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/sign.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/sign.html.twig
@@ -201,7 +201,7 @@
         {{docstosign|length  }}
 
         if (nbfic > 0) {
-            document.javaapplet.launchSigningWithCertificate(certif.value - 1);
+            document.javaapplet.launchSigningWithCertificate(certif.value);
         }
         else {
             $('#lacommode').submit();
