--- a/web/css/style.css
+++ b/web/css/style.css
@@ -22,7 +22,7 @@ html, body {
 	width: auto;
 }
 
-#img_accueil{
+#img_accueil {
 	width: 267px;
 	height: 200px;
 	margin: auto;
@@ -238,17 +238,34 @@ html, body {
 	padding-left: 0.214em;
 }
 
-.visi_button div {
-    width: 5em;
-    padding: .125em 1em;
-    border: 1px solid black;
-    display: inline;
-    background-color: red;
-    cursor: pointer;
+
+/*BOUTON VISI CLASSEUR*/
+.visi_button_actif {
+	color: #ffffff !important;
+	background-color: #83B13A !important;
 }
 
-.visi_button_actif {
-    background-color: green !important;
+.visi_button div {
+	width: 5em;
+	padding: .3em 1em;
+	color: #A9A9A9;
+	background: #f5f5f5;
+	border: 1px solid #cccccc;
+	font-weight: bold;
+	display: inline;
+	cursor: pointer;
+}
+
+.visi_button input {
+	display: none;
+}
+
+#visi_publique{
+	border-radius: 3px 0 0 3px;
+}
+
+#visi_prive {
+	border-radius: 0 3px 3px 0;
 }
 
 #fichiers {
@@ -352,18 +369,19 @@ html, body {
 	border-bottom: 1px solid #cccccc;
 	margin: 1em 0em;
 }
-.deleg-to-someone{
-	color: #6D6E70;
+
+.deleg-to-someone {
+	color: #6d6e70;
 	height: 2em;
 	width: auto;
 	display: inline;
 	line-height: 18px;
 	padding: 4px 4px 4px 5px;
 	text-align: center;
-	text-shadow: 0 1px 0 #FFFFFF;
+	text-shadow: 0 1px 0 #ffffff;
 }
 
-select  [name=user] {
+select [name=user] {
 	width: 50px;
 }
 
@@ -375,15 +393,6 @@ select  [name=user] {
 .btn {
 	margin: 0 6px 0 0 !important;
 }
-
-/*.btn-valider,*/
-/*.btn-modifier,*/
-/*.btn-refuser,*/
-/*.btn-retracter,*/
-/*.btn-supprimer {*/
-	/*color: white;*/
-	/*padding: 3px 6px !important;*/
-/*}*/
 
 .btn-valider {
 	background-color: rgb(15, 148, 0);
@@ -404,11 +413,6 @@ select  [name=user] {
 .btn-retracter {
 	background-color: rgb(240, 117, 0);
 }
-
-/*.add-on {*/
-/*background: none repeat scroll 0 0 #F5F5F5;*/
-/*border: 1px solid #CCCCCC;*/
-/*}*/
 
 /*BOUTONS TABLEAU*/
 .active_inactive_user .glyphicon-ok {
