--- a/src/Sesile/UserBundle/Resources/views/Default/edit.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Default/edit.html.twig
@@ -72,9 +72,19 @@
         <br/>
 
         <div class="label_form parcou">
+            <button type="button"  id="btn_avatar">
+                Choisir un fichier
+            </button>
             {{ form_label(edit_form.file) }}
-            {{ form_widget(edit_form.file) }}
+            {{ form_widget(edit_form.file, { 'attr': {'class': 'parc_avatar'} }) }}
         </div>
+
+        <script type="text/javascript">
+            $("#btn_avatar").click(function(){
+                $(".parcou input[type='file']").trigger( "click" );
+            });
+        </script>
+
         <br/>
 
         <div class="label_form pickuser">
