--- a/web/css/style.css
+++ b/web/css/style.css
@@ -238,25 +238,16 @@ html, body {
 	padding-left: 0.214em;
 }
 
-/*INPUT AVATAR*/
-#btn_avatar{
-    background-color: pink;
-}
-
-.parc_avatar {
-    display:none !important;
-}
-
 /*BOUTON VISI CLASSEUR*/
 .visi_button_actif {
 	color: #ffffff !important;
-	background-color: #83B13A !important;
+	background-color: #83b13a !important;
 }
 
 .visi_button div {
 	width: 5em;
 	padding: .3em 1em;
-	color: #A9A9A9;
+	color: #a9a9a9;
 	background: #f5f5f5;
 	border: 1px solid #cccccc;
 	font-weight: bold;
@@ -268,7 +259,7 @@ html, body {
 	display: none;
 }
 
-#visi_publique{
+#visi_publique {
 	border-radius: 3px 0 0 3px;
 }
 
@@ -496,16 +487,12 @@ select [name=user] {
 	padding-left: 32%;
 }
 
-.parcou {
-	width: 45% !important;
-}
-
 .parcou label,
 .pickuser label {
 	border: 1px solid #cccccc;
 }
 
-.label-form-input {
+.label-form-input, .btn_avatar {
 	border: 1px solid #cccccc;
 }
 
@@ -513,6 +500,28 @@ select [name=user] {
 	color: rgb(50, 133, 171) !important;
 }
 
+/*INPUT AVATAR*/
+.parcou label {
+	position: relative;
+}
+
+.btn_avatar {
+	display: inline;
+	left: -0.4em;
+	position: relative;
+	height: 1.85em;
+	color: #A9A9A9;
+	padding: 0 2em 0 2em;
+}
+
+.nom_avatar {
+	color: #A9A9A9;
+	font-weight: bold;
+}
+
+.parc_avatar {
+	display: none !important;
+}
 /*CHECKBOX CREATION USER*/
 .cb-enable, .cb-disable, .cb-enable span, .cb-disable span {
 	background: url("/images/switch.gif") repeat-x;
