Ajout de la possibilité de supprimer un document depuis la page d'un classeur

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
@@ -101,12 +101,16 @@
         <!-- /.modal -->
 
         <script type="application/javascript">
-            $(document).ready(function () {
-                $(".selects_circuit:nth-child(2)").hide();
 
+            function loadDocuments() {
                 $('#documentcontent').load(Routing.generate('edit_document_for_classeur', {id: {{ classeur.id }}}), function () {
                     enableUploads();
                 });
+            }
+            $(document).ready(function () {
+                $(".selects_circuit:nth-child(2)").hide();
+
+                loadDocuments();
 
                 $(".top_selects_circuits, .suppr_perso").hide();
                 //$("#circuit").sortable("disable");
