--- a/src/Sesile/DocumentBundle/Resources/views/Document/show.html.twig
+++ b/src/Sesile/DocumentBundle/Resources/views/Document/show.html.twig
@@ -141,7 +141,8 @@
             {% if doc is null %}
             removedropzonefile("{{ name }}");
             {% else %}
-            removefile("{{ name }}");
+            removeFile("{{ doc.id }}");
+
             {% endif %}
         } else {
 
