--- a/src/Sesile/UserBundle/Resources/views/Default/edit.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Default/edit.html.twig
@@ -115,16 +115,21 @@
         {{ form_widget(edit_form.apiactivated, {'attr': {'class': 'checkbox' }}) }}
 
         <br/>
+
+        <div id="apitokensecret" style="display:none">
+            <div class="label_form_token label-form-input">
+                {{ form_label(edit_form.apitoken) }}
+                {{ form_widget(edit_form.apitoken) }}
+            </div>
+            <div class="label_form_token label-form-input">
+                {{ form_label(edit_form.apisecret) }}
+                {{ form_widget(edit_form.apisecret) }}
+            </div>
+            <br/>
+        </div>
         <br/>
 
-        <div class="label_form_token label-form-input">
-            {{ form_label(edit_form.apitoken) }}
-            {{ form_widget(edit_form.apitoken) }}
-        </div>
-        <div class="label_form_token label-form-input">
-            {{ form_label(edit_form.apisecret) }}
-            {{ form_widget(edit_form.apisecret) }}
-        </div>
+
         <br/>
         {{ form_widget(edit_form.submit, {'attr': {'class': 'btn btn-success' }}) }}
         {{ form_end(edit_form) }}
@@ -169,6 +174,20 @@
                 //$('.cb-disable', $(this)).click();
             }
         });
+
+        $("#sesile_userbundle_user_apiactivated").change(function (e) {
+            if ($(this).is(':checked')) {
+                $('#apitokensecret').show('slow');
+            } else {
+                $('#apitokensecret').hide('slow');
+            }
+        });
+
+        if ($("#sesile_userbundle_user_apiactivated").is(':checked')) {
+            $('#apitokensecret').show('slow');
+        } else {
+            $('#apitokensecret').hide('slow');
+        }
 
 
     </script>
