Correction d'une imcompatibilité avec php 5.4,
Correction d'un bug lors de la création d'un user

--- a/src/Sesile/UserBundle/Resources/views/Default/ajout.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Default/ajout.html.twig
@@ -118,5 +118,7 @@
             $(this).addClass('selected');
             $('.checkbox', parent).attr('checked', false);
         });
+
+        $('.checkbox', $(".acti")).attr('checked', true);
     </script>
 {% endblock %}
