--- a/src/Sesile/UserBundle/Resources/views/Hierarchie/create.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Hierarchie/create.html.twig
@@ -1,48 +1,60 @@
 {% extends 'SesileMainBundle:Default:index.html.twig' %}
 
 {% block content %}
-    <script type="text/javascript" src="{{ asset('/js/jquery-ui.min.js') }}"></script>
-    <link rel="stylesheet" href="{{ asset('/css/jquery.jOrgChart.css') }}"/>
+
+    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="{{ asset("/js/colorpicker.js") }}"></script>
+    <link type="text/css" rel="stylesheet" href="{{ asset("/css/colorpicker.css") }}"/>
+
+    <script src="{{ asset("/js/select2.min.js") }}"></script>
+    <link type="text/css" rel="stylesheet" href="{{ asset("/css/select2.css") }}"/>
+    <link type="text/css" rel="stylesheet" href="{{ asset("/css/colorpicker.css") }}"/>
+    <link type="text/css" rel="stylesheet" href="{{ asset("/css/organigramme.css") }}"/>
+
+
+
+
     <div class="bloc_page">
-        <select id="users_list">
-            {% for user in users %}
-                <option value="{{ user.id }}">{{ user.username }}</option>
-            {% endfor %}
-        </select>
-        <button type="button" id="user_add">Ajouter</button>
-        <ul id="org" style="display:none">
-        </ul>
-        <div id="hierarchie">
+        <div class="titre_page">
+            <span class="glyphicon glyphicon-folder-open"></span>
+            &nbsp;&nbsp;&nbsp;Créer / éditer un groupe fonctionnel ou un service
         </div>
+        <form id="form_hierarchy" method="post" action="{{ path("create_hierarchy") }}">
+        <div id="edit_service">
+            Nom <input type="text" name="name" id="nom_groupe"/>
+            <select id="type_groupe">
+                <option value="1">Groupe fonctionnel</option>
+                <option value="2">Service</option>
+            </select>
+        </div>
+        <div id="toolbar">
+            Utilisateurs
+            <select id="listUsers">
+                {% for user in users %}
+                    <option value="{{ user.id }}">{{ user.prenom }} {{ user.nom }}</option>
+                {% endfor %}
+            </select>
+            <button type="button" id="addUser">OK</button>
+            <button  type="button" id="btnSupprimer">Supprimer</button>
+            <span id="picker">Couleur</span>
+        </div>
+        <br>
+
+        <script src="{{ asset("/js/organigramme.js") }}"></script>
+
+        <input type="hidden" name="tree" id="tree" />
+        </form>
+
+        <button class="btn btn-success" id="btn-envoyer">Enregistrer</button>
     </div>
-    <script type="text/javascript" src="{{ asset('/js/jquery.jOrgChart.js') }}"></script>
+
     <script type="text/javascript">
-        if ($("#org li").length > 0) {
-            $("#org").jOrgChart({
-                chartElement: "#hierarchie",
-                dragAndDrop: true
-            });
-        }
-
-        var i = 0;
-        $("#user_add").click(function () {
-            $("#hierarchie").empty();
-            var opt_sel = $("#users_list option:selected");
-
-            if ($("#org li").length == 0) {
-                $("<li/>").text(opt_sel.text() + "_" + i++).appendTo("#org");
-            }
-            else {
-                var premier_ul = $("#org li ul:first");
-                if (premier_ul.length == 0) {
-                    premier_ul = $("<ul/>").appendTo($("#org li:first"));
-                }
-                $("<li/>").text(opt_sel.text() + "_" + i++).appendTo(premier_ul);
-            }
-
-            $("#org").jOrgChart({
-                chartElement: "#hierarchie",
-                dragAndDrop: true
+        /***********Envoi des données ***************************/
+        $(document).ready(function() {
+            $("#btn-envoyer").click(function(e) {
+                e.preventDefault();
+                $("#tree").val(JSON.stringify(root));
+                $("#form_hierarchy").submit();
             });
         });
     </script>
