--- a/src/Sesile/UserBundle/Resources/views/Hierarchie/create.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Hierarchie/create.html.twig
@@ -21,8 +21,8 @@
         </div>
         <form id="form_hierarchy" method="post" action="{{ path("create_hierarchy") }}">
         <div id="edit_service">
-            Nom <input type="text" name="name" id="nom_groupe"/>
-            <select id="type_groupe">
+            Nom <input type="text" name="name" id="nom_groupe" value=""/>
+            <select id="type_groupe" name="type_groupe">
                 <option value="1">Groupe fonctionnel</option>
                 <option value="2">Service</option>
             </select>
@@ -53,7 +53,8 @@
         $(document).ready(function() {
             $("#btn-envoyer").click(function(e) {
                 e.preventDefault();
-                $("#tree").val(JSON.stringify(root));
+                var nodes = tree.nodes(root);
+                $("#tree").val(JSON.stringify(getDataFromNodes(nodes[0])));
                 $("#form_hierarchy").submit();
             });
         });
