--- a/src/Sesile/UserBundle/Resources/views/Hierarchie/create.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Hierarchie/create.html.twig
@@ -21,7 +21,7 @@
         </div>
         <form id="form_hierarchy" method="post" action="{{ path("create_hierarchy") }}">
         <div id="edit_service">
-            Nom <input type="text" name="name" id="nom_groupe" value=""/>
+            Nom <input type="text" name="nom_groupe" id="nom_groupe" value=""/>
             <select id="type_groupe" name="type_groupe">
                 <option value="1">Groupe fonctionnel</option>
                 <option value="2">Service</option>
