--- a/src/Sesile/UserBundle/Resources/views/Hierarchie/create.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Hierarchie/create.html.twig
@@ -15,48 +15,71 @@
 
 
     <div class="bloc_page">
-        <div class="titre_page">
-            <span class="glyphicon glyphicon-folder-open"></span>
-            &nbsp;&nbsp;&nbsp;Créer / éditer un groupe fonctionnel ou un service
-        </div>
-        <form id="form_hierarchy" method="post" action="{{ path("create_hierarchy") }}">
-        <div id="edit_service">
-            Nom <input type="text" name="name" id="nom_groupe" value=""/>
-            <select id="type_groupe" name="type_groupe">
-                <option value="1">Groupe fonctionnel</option>
-                <option value="2">Service</option>
-            </select>
-        </div>
-        <div id="toolbar">
-            Utilisateurs
-            <select id="listUsers">
-                {% for user in users %}
-                    <option value="{{ user.id }}">{{ user.prenom }} {{ user.nom }}</option>
-                {% endfor %}
-            </select>
-            <button type="button" id="addUser">OK</button>
-            <button  type="button" id="btnSupprimer">Supprimer</button>
-            <span id="picker">Couleur</span>
-        </div>
-        <br>
+	<div class="titre_page">
+	    <span class="glyphicon glyphicon-folder-open"></span>
+	    &nbsp;&nbsp;&nbsp;Créer un groupe fonctionnel
+	</div>
 
-        <script src="{{ asset("/js/organigramme.js") }}"></script>
+	<form id="form_hierarchy" method="post" action="{{ path("create_hierarchy") }}">
+	    <div id="edit_service">
+		Nom&nbsp;:&nbsp;  <input type="text" name="name" id="nom_groupe" value=""/>
+		<select id="type_groupe" name="type_groupe">
+			<option value="1">Groupe fonctionnel</option>
+			<option value="2">Service</option>
+		    </select>
+		    &nbsp;&nbsp;
+		    <button class="btn btn-success btn-envoyer">
+			<span class="glyphicon glyphicon-ok" style="color: #ffffff"></span>
+			Enregistrer
+		    </button>
+		    &nbsp;&nbsp;
+		    <button class="btn btn-danger btn-envoyer">
+			<span class=" glyphicon glyphicon-remove" style="color: #ffffff"></span>
+			Annuler
+		    </button>
+	    </div>
 
-        <input type="hidden" name="tree" id="tree" />
-        </form>
+	    <div id="toolbar">
+		Utilisateurs&nbsp;:&nbsp;
+		<select id="listUsers">
+		    {% for user in users %}
+			<option value="{{ user.id }}">{{ user.prenom }} {{ user.nom }}</option>
+		    {% endfor %}
+		</select>
 
-        <button class="btn btn-success" id="btn-envoyer">Enregistrer</button>
+		<button type="button" id="addUser" class="btn btn-default btn-envoyer">
+		    <span class="glyphicon glyphicon-plus" style="color: #6D6E70"></span>
+		    Ajouter
+		</button>
+
+		<button  type="button" id="btnSupprimer" class="btn btn-danger btn-envoyer">
+		    <span class="glyphicon glyphicon-minus" style="color: #ffffff"></span>
+		    Supprimer
+		</button>
+
+		<button type="button" id="picker" class="btn btn-default btn-envoyer">
+		    <span class="glyphicon glyphicon-star" style="color: #6D6E70;"></span>
+		    <span class="textcolor">Couleur</span>
+		    <span class="glyphicon glyphicon-star" style="color: #6D6E70;"></span>
+		</button>
+	    </div>
+
+	    <br>
+	    <script src="{{ asset("/js/organigramme.js") }}"></script>
+
+	    <input type="hidden" name="tree" id="tree" />
+	</form>
     </div>
 
     <script type="text/javascript">
-        /***********Envoi des données ***************************/
-        $(document).ready(function() {
-            $("#btn-envoyer").click(function(e) {
-                e.preventDefault();
-                var nodes = tree.nodes(root);
-                $("#tree").val(JSON.stringify(getDataFromNodes(nodes[0])));
-                $("#form_hierarchy").submit();
-            });
-        });
+	/***********Envoi des données ***************************/
+	$(document).ready(function() {
+	    $("#btn-envoyer").click(function(e) {
+		e.preventDefault();
+		var nodes = tree.nodes(root);
+		$("#tree").val(JSON.stringify(getDataFromNodes(nodes[0])));
+		$("#form_hierarchy").submit();
+	    });
+	});
     </script>
 {% endblock %}
