bandeau organigramme v3 (enlevé txt)

--- a/src/Sesile/UserBundle/Resources/views/Hierarchie/create.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Hierarchie/create.html.twig
@@ -30,12 +30,10 @@
 		    &nbsp;&nbsp;
 		    <button class="btn btn-success btn-envoyer">
 			<span class="glyphicon glyphicon-ok" style="color: #ffffff"></span>
-			Enregistrer
 		    </button>
 		    &nbsp;&nbsp;
 		    <button class="btn btn-danger btn-envoyer">
 			<span class=" glyphicon glyphicon-remove" style="color: #ffffff"></span>
-			Annuler
 		    </button>
 	    </div>
 
@@ -47,14 +45,16 @@
 		    {% endfor %}
 		</select>
 
+
+		<a class="sesiletooltip mentionlegales"<!-- data-toggle="tooltip"
+title="Parapheur Sesile - 2013" -->
+		</a>
 		<button type="button" id="addUser" class="btn btn-default btn-envoyer">
 		    <span class="glyphicon glyphicon-plus" style="color: #6D6E70"></span>
-		    Ajouter
 		</button>
 
 		<button  type="button" id="btnSupprimer" class="btn btn-danger btn-envoyer">
 		    <span class="glyphicon glyphicon-minus" style="color: #ffffff"></span>
-		    Supprimer
 		</button>
 
 		<button type="button" id="picker" class="btn btn-default btn-envoyer">
