--- a/web/css/organigramme.css
+++ b/web/css/organigramme.css
@@ -41,6 +41,16 @@
     stroke: none !important;
 }
 
+#type_groupe,
+#nom_groupe,
+#picker{
+	width: 25%;
+}
+
+.glyphicon-star{
+	font-size: 0.2em;
+}
+
 /*********************************************** TOOLBAR *************************************************************/
 #form_hierarchy{
 	background: url("/images/vichy.png") repeat scroll 0 0 #FFFFFF;
@@ -54,7 +64,7 @@
 
 #edit_service {
 	display: inline-block;
-	width: 50%;
+	width: 45%;
 	height: 35px;
 	padding: 5px 10px;
 }
@@ -62,7 +72,7 @@
 #toolbar {
 	display: inline-block;
 	float: right;
-	width: 50%;
+	width: 55%;
 	height: 35px;
 	padding: 5px 10px;
 }
@@ -70,7 +80,7 @@
 .btn-envoyer {
 	height: 26px;
 	line-height: 26px;
-	padding: 0 15px;
+	padding: 0 9px;
 	text-align: center;
 	vertical-align: middle;
 }
