--- a/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
@@ -117,6 +117,12 @@
 			    Gestion des groupes fonctionnels
 			</a>
 		    </li>
+		    <li>
+			<a href="{{ path("organigramme") }}">
+			    <img class="arrows" src="{{ asset("/images/arrowgreen.png") }}"/>
+			    Organigramme
+			</a>
+		    </li>
                     {% if is_granted('ROLE_SUPER_ADMIN') %}
                         <li>
                         <a href="{{ path("index_collectivite") }}">
