--- a/src/Sesile/UserBundle/Resources/views/Hierarchie/edit.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Hierarchie/edit.html.twig
@@ -16,28 +16,31 @@
 
     <div class="bloc_page">
 	<div class="titre_page">
-	    <span class="glyphicon glyphicon-folder-open"></span>
-	    &nbsp;&nbsp;&nbsp;Editer un groupe fonctionnel
+	    {% if organigramme is defined  %}
+		<span class="glyphicon glyphicon-folder-open"></span>
+		&nbsp;&nbsp;&nbsp;Organigramme
+	    {% elseif groupe is defined %}
+		<span class="glyphicon glyphicon-folder-open"></span>
+	        &nbsp;&nbsp;&nbsp;Éditer un groupe fonctionnel
+	    {% else %}
+		<span class="glyphicon glyphicon-folder-open"></span>
+		&nbsp;&nbsp;&nbsp;Créer un groupe fonctionnel
+	    {% endif %}
 	</div>
 
-	<form id="form_hierarchy" method="post" action="{{ path("update_groupe") }}">
+	<form id="form_hierarchy" method="post" action="{% if groupe is defined %}{{ path("update_groupe") }} {% else %}{{ path("new_groupe") }} {% endif %}">
 	    <div id="edit_service">
-            <input type="hidden" name="id" id="id_groupe" value="{{ groupe.id }}"/>
-		Nom&nbsp;:&nbsp;  <input type="text" name="nom" id="nom_groupe" value="{{ groupe.Nom }}"/>
-		<select id="type_groupe" name="type_groupe">
-			<option value="1">Groupe fonctionnel</option>
-			<option value="2">Service</option>
-		    </select>
-		    &nbsp;&nbsp;
-		    <button id="btn-envoyer" type="button" class="btn btn-success btn-envoyer">
-			<span class="glyphicon glyphicon-ok" style="color: #ffffff"></span>
-			Enregistrer
-		    </button>
-		    &nbsp;&nbsp;
-		    <button id="btn-annuler" type="button" class="btn btn-danger btn-envoyer">
-			<span class=" glyphicon glyphicon-remove" style="color: #ffffff"></span>
-			Annuler
-		    </button>
+		{% if groupe is defined %}
+		    <input type="hidden" name="id" id="id_groupe" value="{{ groupe.id }}"/>
+		{% endif %}
+		Nom&nbsp;:&nbsp;  <input type="text" name="nom" id="nom_groupe"{% if groupe is defined %} value="{{ groupe.Nom }}" {% endif %}/>
+		&nbsp;&nbsp;
+		<button id="btn-envoyer" type="button" class="btn btn-success btn-envoyer sesiletooltip" data-original-title="blabla">
+		    <span class="glyphicon glyphicon-ok" style="color: #ffffff"></span>
+		</button>
+		<button id="btn-annuler" type="button" class="btn btn-danger btn-envoyer">
+		    <span class=" glyphicon glyphicon-remove" style="color: #ffffff"></span>
+		</button>
 	    </div>
 
 	    <div id="toolbar">
@@ -48,27 +51,29 @@
 		    {% endfor %}
 		</select>
 
-		<button type="button" id="addUser" class="btn btn-default btn-envoyer">
+
+		<button type="button" id="addUser" class="btn btn-default btn-envoyer sesiletooltip" data-original-title="blabla">
 		    <span class="glyphicon glyphicon-plus" style="color: #6D6E70"></span>
-		    Ajouter
 		</button>
 
-		<button type="button" id="btnSupprimer" class="btn btn-danger btn-envoyer">
+		<button  type="button" id="btnSupprimer" class="btn btn-danger btn-envoyer">
 		    <span class="glyphicon glyphicon-minus" style="color: #ffffff"></span>
-		    Supprimer
 		</button>
-
+		{% if organigramme is defined %}
 		<button type="button" id="picker" class="btn btn-default btn-envoyer">
 		    <span class="glyphicon glyphicon-star" style="color: #6D6E70;"></span>
 		    <span class="textcolor">Couleur</span>
 		    <span class="glyphicon glyphicon-star" style="color: #6D6E70;"></span>
 		</button>
+		{% endif %}
 	    </div>
 
 	    <br>
-        <script type="text/javascript">
-            var treeData = {% if groupe.json %} {{ groupe.json | raw }} {% else %} "" {% endif %};
-        </script>
+	    {% if groupe is defined %}
+		<script type="text/javascript">
+		    var treeData = {% if groupe.json %} {{ groupe.json | raw }} {% else %} "" {% endif %};
+		</script>
+	    {% endif %}
 	    <script src="{{ asset("/js/organigramme.js") }}"></script>
 
 	    <input type="hidden" name="tree" id="tree" />
@@ -79,10 +84,10 @@
 	/***********Envoi des données ***************************/
 	$(document).ready(function() {
 	    $("#btn-envoyer").click(function(e) {
-            e.preventDefault();
-            var nodes = tree.nodes(root);
-            $("#tree").val(JSON.stringify(getDataFromNodes(nodes[0])));
-            $("#form_hierarchy").submit();
+		e.preventDefault();
+		var nodes = tree.nodes(root);
+		$("#tree").val(JSON.stringify(getDataFromNodes(nodes[0])));
+		$("#form_hierarchy").submit();
 	    });
 	});
     </script>
