Ajout du calcul des délégations recues récursivement Changement du tableau en page d'acceuil.

--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -107,7 +107,7 @@
                                 <span class="glyphicon glyphicon-share"></span>
                                 Délégations
                             </div>
-                            {% render url("delegations_recues_list") %}
+                            {% render url("delegations_all_list") %}
                         </div>
                         <object id="winFirefoxPlugin" type="application/x-sharepoint" width="0" height="0"
                                 style="display: none;"></object>
